docker-production-assignment/kubernetes/account-injected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"account-deployment","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"account"}},"template":{"metadata":{"annotations":{"sidecar.istio.io/inject":"true"},"labels":{"app":"account"}},"spec":{"containers":[{"image":"manjunath1007/account","name":"account","ports":[{"containerPort":3000}],"resources":{"limits":{"cpu":"200m"},"requests":{"cpu":"100m"}}}]}}}}
  creationTimestamp: "2026-06-02T08:54:30Z"
  generation: 7
  name: account-deployment
  namespace: default
  resourceVersion: "185651"
  uid: dafaa8db-79d3-45e6-9af6-61ced4169668
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: account
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        istio.io/rev: default
        kubectl.kubernetes.io/default-container: account
        kubectl.kubernetes.io/default-logs-container: account
        kubectl.kubernetes.io/restartedAt: "2026-06-05T10:14:43Z"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/status: '{"initContainers":["istio-init","istio-proxy"],"containers":null,"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert","istio-ca-crl"],"imagePullSecrets":null,"revision":"default"}'
      labels:
        app: account
        security.istio.io/tlsMode: istio
        service.istio.io/canonical-name: account
        service.istio.io/canonical-revision: latest
    spec:
      containers:
      - image: manjunath1007/account
        imagePullPolicy: Always
        name: account
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 200m
          requests:
            cpu: 100m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: workload-socket
      - name: credential-socket
      - name: workload-certs
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - emptyDir: {}
        name: istio-data
      - downwardAPI:
          items:
          - fieldRef:
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              fieldPath: metadata.annotations
            path: annotations
        name: istio-podinfo
      - name: istio-token
        projected:
          sources:
          - serviceAccountToken:
              audience: istio-ca
              expirationSeconds: 43200
              path: istio-token
      - configMap:
          name: istio-ca-root-cert
        name: istiod-ca-cert
      - configMap:
          name: istio-ca-crl
          optional: true
        name: istio-ca-crl
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-06-05T10:32:10Z"
    lastUpdateTime: "2026-06-05T10:32:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-06-02T08:54:30Z"
    lastUpdateTime: "2026-06-06T10:10:53Z"
    message: ReplicaSet "account-deployment-6b9fc98595" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 2
  replicas: 2
  terminatingReplicas: 0
  updatedReplicas: 2
---
