docker-production-assignment/kubernetes/account-pvc.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: account

  template:
    metadata:
      labels:
        app: account

    spec:
      containers:
      - name: account
        image: manjunath1007/account
        ports:
        - containerPort: 3000

        volumeMounts:
        - mountPath: /app/data
          name: account-storage

      volumes:
      - name: account-storage
        persistentVolumeClaim:
          claimName: account-pvc
