docker-production-assignment/kubernetes/account-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-v2

spec:
  replicas: 2
  selector:
    matchLabels:
      app: account

  template:
    metadata:
      labels:
        app: account
        version: v2  
      annotations:
        sidecar.istio.io/inject: "true"    
    spec:
      containers:
      - name: account
        image: manjunath1007/account
        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
