docker-production-assignment/kubernetes/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification

  template:
    metadata:
      labels:
        app: notification

    spec:
      containers:
      - name: notification
        image: manjunath1007/notification
        ports:
        - containerPort: 5000
