docker-production-assignment/kubernetes/transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction

  template:
    metadata:
      labels:
        app: transaction

    spec:
      containers:
      - name: transaction
        image: manjunath1007/transaction
