docker-production-assignment/kubernetes/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service

spec:
  type: NodePort
  selector:
    app: account

  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30007
