docker-production-assignment/kubernetes/notification-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-service

spec:
  type: NodePort
  selector:
    app: notification

  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30008
