docker-production-assignment/kubernetes/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: account-destination

spec:
  host: account-service

  subsets:
  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2
