docker-production-assignment/kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account-routing

spec:
  hosts:
  - "*"

  gateways:
  - my-gateway

  http:
  - route:
    - destination:
        host: account-service
        subset: v1
      weight: 80

    - destination:
        host: account-service
        subset: v2
      weight: 20
